[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/icons/bin.png" type="Texture" id=1]
[ext_resource path="res://listables/routine_step.gd" type="Script" id=2]
[ext_resource path="res://listables/collection_options.gd" type="Script" id=3]

[node name="Panel" type="Panel"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1019.0
margin_bottom = 35.0

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer"]
margin_right = 982.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="Pause" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/Control/Pause"]
margin_right = 982.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Pause the routine"
align = 1
valign = 1

[node name="Collection" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/Control/Collection"]
margin_left = 355.0
margin_right = 405.0
margin_bottom = 30.0
size_flags_vertical = 3
text = "Use the"
align = 1
valign = 1

[node name="CollectionName" type="OptionButton" parent="MarginContainer/HBoxContainer/Control/Collection"]
margin_left = 409.0
margin_right = 559.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 0 )
text = "Item 0"
align = 1
script = ExtResource( 3 )

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/Control/Collection"]
margin_left = 563.0
margin_right = 626.0
margin_bottom = 30.0
size_flags_vertical = 3
text = "collection"
align = 1
valign = 1

[node name="Practice" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/Control/Practice"]
margin_left = 216.0
margin_right = 271.0
margin_bottom = 30.0
size_flags_vertical = 3
text = "Practice "
align = 1
valign = 1

[node name="PracticeReps" type="LineEdit" parent="MarginContainer/HBoxContainer/Control/Practice"]
margin_left = 275.0
margin_right = 333.0
margin_bottom = 30.0
text = "20"
align = 1
placeholder_text = "20"

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/Control/Practice"]
margin_left = 337.0
margin_right = 395.0
margin_bottom = 30.0
size_flags_vertical = 3
text = "times for"
align = 1
valign = 1

[node name="PracticeImageTime" type="LineEdit" parent="MarginContainer/HBoxContainer/Control/Practice"]
margin_left = 399.0
margin_right = 457.0
margin_bottom = 30.0
text = "15"
align = 1
placeholder_text = "15"

[node name="Label3" type="Label" parent="MarginContainer/HBoxContainer/Control/Practice"]
margin_left = 461.0
margin_right = 579.0
margin_bottom = 30.0
size_flags_vertical = 3
text = "seconds each with"
align = 1
valign = 1

[node name="PracticeAfterTime" type="LineEdit" parent="MarginContainer/HBoxContainer/Control/Practice"]
margin_left = 583.0
margin_right = 641.0
margin_bottom = 30.0
text = "1"
align = 1
placeholder_text = "1"

[node name="Label4" type="Label" parent="MarginContainer/HBoxContainer/Control/Practice"]
margin_left = 645.0
margin_right = 765.0
margin_bottom = 30.0
size_flags_vertical = 3
text = "seconds after each"
align = 1
valign = 1

[node name="Break" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/Control/Break"]
margin_left = 336.0
margin_top = 8.0
margin_right = 440.0
margin_bottom = 22.0
text = "Take a break for "

[node name="BreakTime" type="LineEdit" parent="MarginContainer/HBoxContainer/Control/Break"]
margin_left = 444.0
margin_right = 502.0
margin_bottom = 30.0
text = "20"
align = 1
placeholder_text = "20"

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/Control/Break"]
margin_left = 506.0
margin_top = 8.0
margin_right = 646.0
margin_bottom = 22.0
text = "seconds and continue"

[node name="Remove" type="Button" parent="MarginContainer/HBoxContainer"]
margin_left = 986.0
margin_right = 1014.0
margin_bottom = 30.0
icon = ExtResource( 1 )
flat = true

[connection signal="after_item_selected" from="MarginContainer/HBoxContainer/Control/Collection/CollectionName" to="." method="_on_CollectionName_after_item_selected"]
[connection signal="text_changed" from="MarginContainer/HBoxContainer/Control/Practice/PracticeReps" to="." method="_on_PracticeReps_text_changed"]
[connection signal="text_entered" from="MarginContainer/HBoxContainer/Control/Practice/PracticeReps" to="." method="_on_PracticeReps_text_entered"]
[connection signal="text_changed" from="MarginContainer/HBoxContainer/Control/Practice/PracticeImageTime" to="." method="_on_PracticeImageTime_text_changed"]
[connection signal="text_entered" from="MarginContainer/HBoxContainer/Control/Practice/PracticeImageTime" to="." method="_on_PracticeImageTime_text_entered"]
[connection signal="text_changed" from="MarginContainer/HBoxContainer/Control/Practice/PracticeAfterTime" to="." method="_on_PracticeAfterTime_text_changed"]
[connection signal="text_entered" from="MarginContainer/HBoxContainer/Control/Practice/PracticeAfterTime" to="." method="_on_PracticeAfterTime_text_entered"]
[connection signal="text_changed" from="MarginContainer/HBoxContainer/Control/Break/BreakTime" to="." method="_on_BreakTime_text_changed"]
[connection signal="text_entered" from="MarginContainer/HBoxContainer/Control/Break/BreakTime" to="." method="_on_BreakTime_text_entered"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Remove" to="." method="_on_Remove_pressed"]
